--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,31 @@ markdown-it-py==3.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
+numpy==2.1.1
+    # via pandas
 packaging==24.1
     # via plotly
+pandas==2.2.3
+    # via -r requirements.in
 plotly==5.24.1
     # via -r requirements.in
 pygments==2.18.0
     # via rich
+python-dateutil==2.9.0.post0
+    # via pandas
+pytz==2024.2
+    # via pandas
 rich==13.9.2
     # via typer
 shellingham==1.5.4
     # via typer
+six==1.16.0
+    # via python-dateutil
 tenacity==9.0.0
     # via plotly
 typer==0.12.5
     # via -r requirements.in
 typing-extensions==4.12.2
     # via typer
+tzdata==2024.2
+    # via pandas
